--- a/services.html
+++ b/services.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>SERVICES</title>
+    <link rel = "shortcut icon" type = "x-icon" href="Group 4.png">
+
 </head>
 <body style="background: #F5EBE0">
     <div style="width: 100%; height: 100%; position: relative;">
