--- a/aboutUs.html
+++ b/aboutUs.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ABOUT US</title>
+    <link rel = "shortcut icon" type = "x-icon" href="Group 4.png">
+
 </head>
 
 <body style="background: #F5EBE0">
