--- a/aboutUs.html
+++ b/aboutUs.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ABOUT US</title>
     <link rel = "shortcut icon" type = "x-icon" href="Group 4.png">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Glacial+Indifference">
+
 
 </head>
 
@@ -12,32 +14,26 @@
     <div style="width: 100%; height: 100%; position: relative;">
         <div style="width: 1440px; height: 100px; left: 0px; top: 26px; position: absolute">
             <div style="width: 392px; height: 79px; left: 51px; top: 0px; position: absolute">
-                <div style="width: 316px; height: 54px; left: 76px; top: 11px; position: absolute">
-                    <div style="width: 89px; height: 54px; left: 0px; top: 0px; position: absolute; color: black; font-size: 48px; font-family: Glacial Indifference; font-weight: 700; word-wrap: break-word"><a href="index.html" style="text-decoration: none; color: black;">BRP </a></div>
-                    <div style="width: 237px; height: 54px; left: 79px; top: 0px; position: absolute; color: black; font-size: 48px; font-family: Glacial Indifference; font-weight: 400; word-wrap: break-word"><a href="index.html" style="text-decoration: none; color: black;">PRINTERS</a></div>
-                </div>
-                <div style="width: 45px; height: 60px; left: 10px; top: 10px; position: absolute">
-                    <a href="index.html" style="text-decoration: none;"><img src="Group 4.png" height="60px"></a>
-                </div>
+                <a href="index.html"><img src="image 2.png" style="width: 392px; height: 85px; left: 0px; top: -10px; position: absolute" ></a>
             </div>
             <div style="width: 913px; height: 50px; left: 482px; top: 5px; position: absolute; background: #D6CCC2; box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25); border-radius: 46px; border: 1px black solid"></div>
         </div>
 
-        <div style="left: 534px; top: 40px; position: absolute; color: black; font-size: 25px; font-family: Glacial Indifference; font-weight: 400; letter-spacing: 1.50px; word-wrap: break-word"><a href = "index.html" style = "text-decoration: none; color: black;">HOME</a></div>
-        <div style="left: 646px; top: 40px; position: absolute; color: black; font-size: 25px; font-family: Glacial Indifference; font-weight: 400; letter-spacing: 1.50px; word-wrap: break-word"><a href = "aboutUs.html" style = "text-decoration: none; color: black;">ABOUT US</a></div>
-        <div style="left: 817px; top: 40px; position: absolute; color: black; font-size: 25px; font-family: Glacial Indifference; font-weight: 400; letter-spacing: 1.50px; word-wrap: break-word"><a href = "machinery.html" style = "text-decoration: none; color: black;">MACHINERY</a></div>
-        <div style="left: 1011px; top: 40px; position: absolute; color: black; font-size: 25px; font-family: Glacial Indifference; font-weight: 400; letter-spacing: 1.50px; word-wrap: break-word"><a href = "services.html" style = "text-decoration: none; color: black;">SERVICES</a></div>
-        <div style="left: 1179px; top: 40px; position: absolute; color: black; font-size: 25px; font-family: Glacial Indifference; font-weight: 400; letter-spacing: 1.50px; word-wrap: break-word"><a href = "contactUs.html" style = "text-decoration: none; color: black;">CONTACT US</a></div>
+        <div style="left: 534px; top: 40px; position: absolute; color: black; font-size: 25px; font-family: Glacial Indifference, sans-serif; font-weight: 400; letter-spacing: 1.50px; word-wrap: break-word"><a href = "index.html" style = "text-decoration: none; color: black;">HOME</a></div>
+        <div style="left: 646px; top: 40px; position: absolute; color: black; font-size: 25px; font-family: Glacial Indifference, sans-serif; font-weight: 400; letter-spacing: 1.50px; word-wrap: break-word"><a href = "aboutUs.html" style = "text-decoration: none; color: black;">ABOUT US</a></div>
+        <div style="left: 817px; top: 40px; position: absolute; color: black; font-size: 25px; font-family: Glacial Indifference, sans-serif; font-weight: 400; letter-spacing: 1.50px; word-wrap: break-word"><a href = "machinery.html" style = "text-decoration: none; color: black;">MACHINERY</a></div>
+        <div style="left: 1011px; top: 40px; position: absolute; color: black; font-size: 25px; font-family: Glacial Indifference, sans-serif; font-weight: 400; letter-spacing: 1.50px; word-wrap: break-word"><a href = "services.html" style = "text-decoration: none; color: black;">SERVICES</a></div>
+        <div style="left: 1179px; top: 40px; position: absolute; color: black; font-size: 25px; font-family: Glacial Indifference, sans-serif; font-weight: 400; letter-spacing: 1.50px; word-wrap: break-word"><a href = "contactUs.html" style = "text-decoration: none; color: black;">CONTACT US</a></div>
     
 
-        <div style="left: 600px; top: 154px; position: absolute; color: black; font-size: 40px; font-family: Glacial Indifference; font-weight: 400; letter-spacing: 6.60px; word-wrap: break-word">ABOUT US</div>
+        <div style="left: 600px; top: 154px; position: absolute; color: black; font-size: 40px; font-family: Glacial Indifference, sans-serif; font-weight: 400; letter-spacing: 6.60px; word-wrap: break-word">ABOUT US</div>
 
         <div style="width: 1000px; height: 400px; left: 127px; top: 230px; position: absolute">
             <div style="width: 1050px; height: 430px; left: 50px; top: 0px; position: absolute; background: #D5BDAF; box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25); border-radius: 50px; border: 1px black solid"></div>
-            <div style="width: 900px; height: 474px; left: 150px; top: 27px; position: absolute; color: black; font-size: 25px; font-family: Glacial Indifference; font-weight: 400; letter-spacing: 3.30px; word-wrap: break-word">BRP PRINTERS is a distinguished company, dedicated to providing top-tier services for all your printing needs. Our journey, embarked upon in July 2011, established by Mr. Pankaj Rana has been a testament to the commitment of delivering excellence in every aspect of the printing process. From meticulous prepress work to precision printing, and seamless finishing to impeccable binding, we ensure the highest quality results. At the core of our business lies integrity and honesty. We take great pride in fostering client relationships that have blossomed into partnerships based on interdependency and mutual growth. Our unwavering focus is on meeting and exceeding the printing requirements of every valued customer.</div>
+            <div style="width: 900px; height: 474px; left: 150px; top: 27px; position: absolute; color: black; font-size: 25px; font-family: Glacial Indifference, sans-serif; font-weight: 400; letter-spacing: 3.30px; word-wrap: break-word">BRP PRINTERS is a distinguished company, dedicated to providing top-tier services for all your printing needs. Our journey, embarked upon in July 2011, established by Mr. Pankaj Rana has been a testament to the commitment of delivering excellence in every aspect of the printing process. From meticulous prepress work to precision printing, and seamless finishing to impeccable binding, we ensure the highest quality results. At the core of our business lies integrity and honesty. We take great pride in fostering client relationships that have blossomed into partnerships based on interdependency and mutual growth. Our unwavering focus is on meeting and exceeding the printing requirements of every valued customer.</div>
         </div>
 
-        <div style="width: 884px; height: 119px; left: 500px; top: 740px; position: absolute; color: black; font-size: 40px; font-family: Glacial Indifference; font-weight: 400; letter-spacing: 7.70px; word-wrap: break-word">ABOUT THE FOUNDER</div>
+        <div style="width: 884px; height: 119px; left: 500px; top: 740px; position: absolute; color: black; font-size: 40px; font-family: Glacial Indifference, sans-serif; font-weight: 400; letter-spacing: 7.70px; word-wrap: break-word">ABOUT THE FOUNDER</div>
         
         <div style="width: 1px; height: 19px; left: 1018px; top: 1101px; position: absolute; background: #D9D9D9; border-radius: 9999px"></div>
         <div style="width: 400px; height: 400px; left: 550px; top: 800px; position: absolute">
@@ -46,7 +42,7 @@
 
         <div style="width: 1050px; height: 400px; left: 110px; top: 1220px; position: absolute">
             <div style="width: 1050px; height: 320px; left: 90px; top: 0px; position: absolute; background: #D5BDAF; box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25); border-radius: 50px; border: 1px black solid"></div>
-            <div style="width: 1000px; height: 300px; left: 125px; top: 35px; position: absolute; color: black; font-size: 25px; font-family: Glacial Indifference; font-weight: 400; letter-spacing: 3.30px; word-wrap: break-word">Mr. Pankaj Rana is the visionary behind BRP PRINTERS. With over a decade of industry expertise, he began this journey in the year 2011. His passion for printing excellence is the driving force behind our commitment to precision, quality, and client satisfaction. Mr. Pankaj leads by example, instilling a culture of integrity and dedication in every aspect of our business. His relentless pursuit of perfection has shaped BRP PRINTERS into a trusted name in the printing industry, dedicated to exceeding customer expectations.</div>
+            <div style="width: 1000px; height: 300px; left: 125px; top: 35px; position: absolute; color: black; font-size: 25px; font-family: Glacial Indifference, sans-serif; font-weight: 400; letter-spacing: 3.30px; word-wrap: break-word">Mr. Pankaj Rana is the visionary behind BRP PRINTERS. With over a decade of industry expertise, he began this journey in the year 2011. His passion for printing excellence is the driving force behind our commitment to precision, quality, and client satisfaction. Mr. Pankaj leads by example, instilling a culture of integrity and dedication in every aspect of our business. His relentless pursuit of perfection has shaped BRP PRINTERS into a trusted name in the printing industry, dedicated to exceeding customer expectations.</div>
         </div>
     </div>
 
@@ -56,7 +52,7 @@
     <footer>
         <div style="width: 100%; height: 100%; position: relative; top: 1600px">
             <div style="width: 1500px; height: 40px; left: 0px; top: 40px; position: absolute; background: #D6CCC2;"></div>
-            <div style="width: 800px; height: 11px; left: 494px; top: 50px; position: absolute; color: black; font-size: 18px; font-family: Glacial Indifference; font-weight: 400; letter-spacing: 3.30px; word-wrap: break-word">Copyrights © BRP PRINTERS 2024. All Rights Reserved.</div>
+            <div style="width: 800px; height: 11px; left: 494px; top: 50px; position: absolute; color: black; font-size: 18px; font-family: Glacial Indifference, sans-serif; font-weight: 400; letter-spacing: 3.30px; word-wrap: break-word">Copyrights © BRP PRINTERS 2024. All Rights Reserved.</div>
         </div>
     </footer>
 </body>
