--- a/index.html
+++ b/index.html
@@ -4,8 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>BRP PRINTERS</title>
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Glacial+Indifference">
-
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Gowun+Dodum&display=swap" rel="stylesheet">
     <link rel = "shortcut icon" type = "x-icon" href="Group 4.png">
 </head>
 <body style="background: #F5EBE0">
@@ -16,14 +17,14 @@
             </div>
             <div style="width: 913px; height: 50px; left: 482px; top: 5px; position: absolute; background: #D6CCC2; box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25); border-radius: 46px; border: 1px black solid"></div>
         </div>
-        <div style="left: 534px; top: 40px; position: absolute; color: black; font-size: 25px; font-family: Glacial Indifference, sans-serif; font-weight: 400; letter-spacing: 1.50px; word-wrap: break-word"><a href = "index.html" style = "text-decoration: none; color: black;">HOME</a></div>
-        <div style="left: 646px; top: 40px; position: absolute; color: black; font-size: 25px; font-family: Glacial Indifference, sans-serif; font-weight: 400; letter-spacing: 1.50px; word-wrap: break-word"><a href = "aboutUs.html" style = "text-decoration: none; color: black;">ABOUT US</a></div>
-        <div style="left: 817px; top: 40px; position: absolute; color: black; font-size: 25px; font-family: Glacial Indifference, sans-serif; font-weight: 400; letter-spacing: 1.50px; word-wrap: break-word"><a href = "machinery.html" style = "text-decoration: none; color: black;">MACHINERY</a></div>
-        <div style="left: 1011px; top: 40px; position: absolute; color: black; font-size: 25px; font-family: Glacial Indifference, sans-serif; font-weight: 400; letter-spacing: 1.50px; word-wrap: break-word"><a href = "services.html" style = "text-decoration: none; color: black;">SERVICES</a></div>
-        <div style="left: 1179px; top: 40px; position: absolute; color: black; font-size: 25px; font-family: Glacial Indifference, sans-serif; font-weight: 400; letter-spacing: 1.50px; word-wrap: break-word"><a href = "contactUs.html" style = "text-decoration: none; color: black;">CONTACT US</a></div>
+        <div style="left: 534px; top: 40px; position: absolute; color: black; font-size: 25px; font-family: 'Gowun Dodum', sans-serif; font-weight: 400; letter-spacing: 1.50px; word-wrap: break-word"><a href = "index.html" style = "text-decoration: none; color: black;">HOME</a></div>
+        <div style="left: 646px; top: 40px; position: absolute; color: black; font-size: 25px; font-family: 'Gowun Dodum', sans-serif; font-weight: 400; letter-spacing: 1.50px; word-wrap: break-word"><a href = "aboutUs.html" style = "text-decoration: none; color: black;">ABOUT US</a></div>
+        <div style="left: 817px; top: 40px; position: absolute; color: black; font-size: 25px; font-family: 'Gowun Dodum', sans-serif; font-weight: 400; letter-spacing: 1.50px; word-wrap: break-word"><a href = "machinery.html" style = "text-decoration: none; color: black;">MACHINERY</a></div>
+        <div style="left: 1011px; top: 40px; position: absolute; color: black; font-size: 25px; font-family: 'Gowun Dodum', sans-serif; font-weight: 400; letter-spacing: 1.50px; word-wrap: break-word"><a href = "services.html" style = "text-decoration: none; color: black;">SERVICES</a></div>
+        <div style="left: 1179px; top: 40px; position: absolute; color: black; font-size: 25px; font-family: 'Gowun Dodum', sans-serif; font-weight: 400; letter-spacing: 1.50px; word-wrap: break-word"><a href = "contactUs.html" style = "text-decoration: none; color: black;">CONTACT US</a></div>
         <div style="width: 632px; height: 553px; left: 70px; top: 235px; position: absolute">
             <div style="width: 550px; height: 350px; left: 30px; top: 0px; position: absolute; background: #D5BDAF; box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25); border-radius: 50px; border: 1px black solid"></div>
-            <div style="width: 538px; height: 350px; left: 80px; top: 54px; position: absolute"><span style="color: black; font-size: 40px; font-family: Glacial Indifference, sans-serif; font-weight: 400; letter-spacing: 6px; word-wrap: break-word">WELCOME TO BRP PRINTERS,<br/></span><span style="color: black; font-size: 40px; font-family: Glacial Indifference, sans-serif; font-weight: 700; letter-spacing: 6px; word-wrap: break-word">CRAFTING QUALITY, DELIVERING EXCELLENCE</span></div>
+            <div style="width: 538px; height: 350px; left: 80px; top: 35px; position: absolute"><span style="color: black; font-size: 40px; font-family: 'Gowun Dodum', sans-serif; font-weight: 400; letter-spacing: 6px; word-wrap: break-word">WELCOME TO BRP PRINTERS,<br/></span><span style="color: black; font-size: 40px; font-family: 'Gowun Dodum', sans-serif; font-weight: 700; letter-spacing: 6px; word-wrap: break-word">CRAFTING QUALITY, DELIVERING EXCELLENCE</span></div>
         </div>
         <div style="width: 450px; height: 600px; left: 826px; top: 158px; position: absolute">
             <img style="width: 300px; height: 250px; left: 25px; top: 150px; position: absolute; transform: rotate(5.22deg); transform-origin: 0 0; box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25); border: 1px black solid" src="1607539296_spiral_bound_books2-webp.jpg" />
